--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter-project",
-  "homepage": ".",
+  "homepage": "https://www.shamansgarage.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
